2009-05-04  Loic Dachary  <loic@dachary.org>

	* Release 1.3.4

2009-04-10  Loic Dachary <loic@dachary.org>

	* Release 1.3.3

	* debian/control, debian/control.unstable: add python-central to
	  source list
	* debian/changelog: Closes: #517557
	* pokerconfigupgrade.in: do not remove files when upgrading
	* tests/test-game.py.in: typo
	* ChangeLog: move release tag up

2009-02-05  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokerengine/pokertournament.py (PokerTournament.createGames):
	Moved callback_game_filled() to be called in a secondary loop
	after balanceGames() is called.
	(PokerTournament.__init__): Added clarifying comment on what
	calback_game_filled() means.
	(PokerTournament.createGames): call game.close() only after the
	game_filled() callback.

2009-01-31  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertournament.py.in
	(PokerTournamentTestCase.testBalanceGames)
	(PokerTournamentTestCase.testBreakGames)
	(PokerTournamentTestCase.testEqualizeCandidates)
	(PokerTournamentTestCase.testEqualizeGames)
	(PokerTournamentTestCase.testMovePlayer): Reworked tests based on
	fact that balanceGames() is called by default by createGames().

2008-12-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokerengine/pokertournament.py (PokerTournament.createGames):
	Call self.balanceGames() at the end of game creation at start of
	the tourney.

	* tests/tournament.py.in
	(TestCreate.test4_tourneyTableStartBalanced): Wrote test.
	(TestCreate.tourneyTableStartBalancedHelper): Created helper
	function.

2008-12-27  Loic Dachary  <loic@dachary.org>

	* ChangeLog, NEWS, conf/poker..01-.02-no-limit.xml,
	  conf/poker..01-.02-pot-limit.xml, conf/poker..02-.04-limit.xml,
	  conf/poker..02-.04-no-limit.xml,
	  conf/poker..02-.04-pot-limit.xml, conf/poker..02..04-limit.xml,
	  conf/poker..05-.10-limit.xml, conf/poker..05-.10-no-limit.xml,
	  conf/poker..05-.10-pot-limit.xml, conf/poker..05..10-limit.xml,
	  conf/poker..10-.25-limit.xml, conf/poker..10-.25-no-limit.xml,